--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "xp-embedded-state",
   "license": "BSD-3-Clause",
-  "version": "0.8.4",
-  "description": "This element is used to add embed capabilities on the context element.",
+  "version": "0.8.5",
+  "description": "A custom element able to recognize whether it's inside an iframe or not",
   "homepage": "http://www.expandjs.com/elements/xp-embedded-state",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
