--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "license": "BSD-3-Clause",
   "version": "0.8.9",
   "description": "A custom element able to recognize whether it's inside an iframe or not",
-  "homepage": "http://www.expandjs.com/elements/xp-embedded-state",
+  "homepage": "http://expandjs.com/elements/xp-embedded-state",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
     "Maurizio Stefàno <m.stefano@expandjs.com>",
